@@ -12,6 +12,7 @@ import org.springframework.web.servlet.HandlerInterceptor;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -27,15 +28,16 @@ public class AuthenticationInterceptor implements HandlerInterceptor {
         String token = request.getHeader("Token");
         if (token == null) {
             Map<String, String> errors = new HashMap<>();
-            // 使用 "auth_error" 作为键，以便在 GlobalExceptionHandler 中识别此类异常
             errors.put("1", "用户未登录或认证已失效");
             throw new ServiceException(errors);
         }
         String userId = jwtUtil.validateToken(token);
+
         UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(
-                userId, null, List.of() // 这里可以添加用户的权限或角色
+                userId, null, Collections.emptyList() // 这里可以添加用户的权限或角色
         );
         SecurityContextHolder.getContext().setAuthentication(authentication);
+
         return true;
     }
 }
